# torchTextClassifiers

./: .gitignore  README.md  generate_docs.py  pyproject.toml  xxx.py
.github/workflows/: deploy-docs.yml  deploy-notebooks.yml  python-package.yml  python-publish.yml
benchmark/: loader.py  multiclass_classification.py
docs/: README.md
docs/source/: api.rst  architecture.rst  conf.py  examples.rst  how-to-handle-large-datasets.rst  how-to-save-and-load-models.rst  how-to-use-custom-tokenizers.rst  index.md  index.rst  installation.rst
examples/: README.md  advanced_training.py  basic_classification.py  categorical_comparison.py  mixed_features.py  multiclass_classification.py  multilabel_classification.py  multilevel_example.py  simple_explainability_example.py  using_additional_features.py
examples/mlflow_logging/: README.md  __init__.py  pyfunc_wrapper.py  run_example.py
notebooks/: _quarto.yml  example.ipynb  multilabel_classification.ipynb  utils.py
tests/: benchmark_suite.py  conftest.py  test_base_classes.py  test_components.py  test_core_functionality.py  test_fasttext_implementation.py  test_pipeline.py  test_tokenizer.py  test_torchTextClassifiers.py  test_wordpiece_tokenizer.py
torchTextClassifiers/: __init__.py  factories.py  test copy.py  test.py  torchTextClassifiers.old.py  torchTextClassifiers.py
torchTextClassifiers/categorical_value_encoder/: __init__.py  categorical_value_encoder.py
torchTextClassifiers/classifiers/: base.py
torchTextClassifiers/contrib/: __init__.py
torchTextClassifiers/dataset/: dataset.py
torchTextClassifiers/model/: categorical_var_net.py  classification_heads.py  lightning.py  model.py
(+47 files in other folders)
